--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -32,7 +32,7 @@
 
     <mat-card class="shipping-card mt-2em" *ngIf="responsables.length > 0">
       <mat-card-header class="header-card colorMainColor">
-        <mat-card-title class="header-card--text"> Responsables secretaría general </mat-card-title>
+        <mat-card-title class="header-card--text"> Responsables secretaría técnica </mat-card-title>
       </mat-card-header>
       <mat-card-content>
           <div *ngFor="let responsable of responsables; let i = index" style="margin-left: 1.5em">
