--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -31,6 +31,7 @@
     <app-flujo-intervencion-recursos
                                     [ajusteProgramacionInfo]="ajusteProgramacionInfo"
                                     [novedadContractualRegistroPresupuestal]="novedadContractualRegistroPresupuestal"
+                                    [datosContratoProyectoModificadosXNovedad]="datosContratoProyectoModificadosXNovedad"
                                     [plazoContratacion] ="plazoContratacion"
                                     [valorContrato] = "valorContrato"
                                     [esVerDetalle]= "esVerDetalle"
