--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
@@ -238,8 +238,8 @@
             </div>
             <div class="row">
               <p>
-                <strong> URL con soporte: </strong>
-                {{ temas.get('url')?.value }}
+                <strong> URL con soporte:  </strong> 
+                <a href="  {{ temas.get('url')?.value }}" >Link del soporte: Tema {{ i + 1 }}  </a>  
               </p>
             </div>
           </div>
