--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
@@ -194,30 +194,34 @@
               <span>
                 {{descuentosValor.valorDescuento | currency: '':'symbol-narrow':'.0-0'}} <br>
               </span>
-            </ng-container> 
+            </ng-container>
 
-            <ng-container  *ngIf="data.otrosDescuentosValorConcepto?.length === 0 || data.otrosDescuentosValorConcepto === undefined ">
+            <ng-container
+              *ngIf="data.otrosDescuentosValorConcepto?.length === 0 || data.otrosDescuentosValorConcepto === undefined ">
               <span>
-                 $0
+                $0
               </span>
-            </ng-container> 
+            </ng-container>
 
           </td>
- 
-       
+
           <td style="border: solid 1px #000">
-            <ng-container  *ngIf="data.otrosDescuentosValorConcepto?.length === 0 || data.otrosDescuentosValorConcepto === undefined ">
+
+            <ng-container
+              *ngIf="data.otrosDescuentosValorConcepto?.length === 0 || data.otrosDescuentosValorConcepto === undefined ">
               <span>
                 N/A
               </span>
-            </ng-container> 
+            </ng-container>
+
             <ng-container *ngFor="let descuentos of data.otrosDescuentosValorConcepto">
               <span>
                 {{descuentos.nombreDescuento}} <br>
               </span>
             </ng-container>
+
           </td>
-          
+
           <td style="border: solid 1px #000">{{ data.valorConcepto - data.descuentoReteFuente - data.descuentoAns -
             data.descuentoOtros | currency: '':'symbol-narrow':'.0-0' }}</td>
 
