--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/saldos-y-rendimientos/saldos-y-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/saldos-y-rendimientos/saldos-y-rendimientos.component.html
@@ -47,7 +47,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Rendimientos incorporados
         </th>
-        <td mat-cell *matCellDef="let element">{{ element.rendimientosIncorporados }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.rendimientosIncorporados  | currency: 'COP':'symbol-narrow':'.0-0'}}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
