--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -15,6 +15,12 @@
         <div class="pr-1">
           <span class="label-left">Número de la solicitud</span>
         </div>
+        <div class="col"  >
+          <b class="label-left color-blue">
+            {{ solicitudes.numeroSolicitud }}
+          </b>
+        </div>
+     <!--
         <div class="col" *ngIf="solicitudes.tipoSolicitudCodigo === tipoSolicitudCodigo.procesoSeleccion">
           <b class="label-left color-blue">
             {{ solicitudes.procesoSeleccion.numeroProceso }}
@@ -50,6 +56,7 @@
             {{ solicitudes.controversiaActuacion !== undefined ? solicitudes.controversiaActuacion.controversiaContractual?.numeroSolicitud : solicitudes?.numeroSolicitud }}
           </b>
         </div>
+-->
       </div>
       <div class="row">
         <div class="pr-1">
