--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
@@ -16,6 +16,8 @@
                                             [fechaSolicitudNovedad]="fechaSolicitudNovedad"
                                             [fechaFinSuspensionVal]="fechaFinSuspensionVal"
                                             [contrato]="contrato"
+                                            [datosContratoProyectoModificadosXNovedad] = "datosContratoProyectoModificadosXNovedad"
+                                            [estadoNovedad]="novedadeContractual?.estadoCodigo"
                                             (guardar)="guardarRegistro()"
                                             >
         </app-form-registrar-novedad-contrato>
