--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -119,10 +119,25 @@
         <strong>Tipo de intervención:</strong>
         NPI Preguntar
       </p> -->
-      <p>
+      <p *ngIf="contrato.datosContratoProyectoModificadosXNovedad != null">
         <strong>Valor del contrato:</strong>
-        {{ (contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
-            contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}
+        <span>
+          {{ contrato?.datosContratoProyectoModificadosXNovedad[0]?.valorContrato | currency:'':'symbol':'3.0' }}
+        </span>
+      </p>
+      <p *ngIf="contrato.datosContratoProyectoModificadosXNovedad != null">
+        <strong >
+          Valor del proyecto
+          <span *ngIf="contrato?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '1'">(Obra) </span>
+          <span *ngIf="contrato?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '2'">(Interventoría </span>:
+        </strong>
+        {{ contrato?.datosContratoProyectoModificadosXNovedad[0]?.valorProyecto | currency: '':'symbol':'3.0' }}
+      </p>
+      <p *ngIf="contrato.datosContratoProyectoModificadosXNovedad != null">
+        <strong>
+          Valor total del proyecto (Obra e Interventoría):
+        </strong>
+        {{ contrato?.datosContratoProyectoModificadosXNovedad[0]?.valorTotalObraInterventoria | currency: '':'symbol':'3.0' }}
       </p>
       <p>
         <strong>Plazo:</strong>
@@ -151,7 +166,12 @@
             | date: 'dd/MM/yyyy'
         }}
       </p>
-
+      <p *ngIf="contrato?.datosContratoProyectoModificadosXNovedad != null && contrato?.datosContratoProyectoModificadosXNovedad != undefined">
+        <strong>Fecha estimada de finalización de contrato:</strong>
+        {{
+          contrato?.datosContratoProyectoModificadosXNovedad[0]?.fechaEstimadaFinContrato | date: 'dd/MM/yyyy'
+        }}
+      </p>
       <div class="animatedDown" *ngIf="novedadAplicada.value === false && proyecto">
         <h2 class="card-subTitle">Proyecto asociado</h2>
         <p>
