--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -51,8 +51,22 @@
       <p>
         <strong>Valor del contrato:</strong>
         <span>
-          {{ novedad.proyectosContrato[0].valorTotal | currency:'':'symbol':'3.0' }}
+          {{ novedad?.datosContratoProyectoModificadosXNovedad[0]?.valorContrato | currency:'':'symbol':'3.0' }}
         </span>
+      </p>
+      <p>
+        <strong >
+          Valor del proyecto
+          <span *ngIf="novedad?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '1'">(Obra) </span>
+          <span *ngIf="novedad?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '2'">(Interventoría </span>:
+        </strong>
+        {{ novedad?.datosContratoProyectoModificadosXNovedad[0]?.valorProyecto | currency: '':'symbol':'3.0' }}
+      </p>
+      <p>
+        <strong>
+          Valor total del proyecto (Obra e Interventoría):
+        </strong>
+        {{ novedad?.datosContratoProyectoModificadosXNovedad[0]?.valorTotalObraInterventoria | currency: '':'symbol':'3.0' }}
       </p>
       <p>
         <strong>Plazo:</strong>
@@ -171,6 +185,12 @@
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional días: </strong> {{
                 descripcion.plazoAdicionalDias }}</p>
 
+                <p  *ngIf="descripcion.tipoNovedadCodigo == '4'">
+                  <strong >
+                    Plazo después de la modificación:
+                  </strong>
+                  {{ valuePlazoProyecto(descripcion.plazoAdicionalMeses, descripcion.plazoAdicionalDias) }}
+                </p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
                 <strong>
                   Fecha de inicio
@@ -192,7 +212,7 @@
                 <strong>
                   Fecha estimada de terminación del contrato:
                 </strong>
-                {{ descripcion?.fechaEstimadaFinalizacion | date: 'dd/MM/yyyy' }}
+                <span> {{ updateFechaEstimada(descripcion.fechaFinSuspension, descripcion.fechaInicioSuspension )  | date: 'dd/MM/yyyy' }}</span>
               </p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '6'">
                 <strong>
@@ -202,7 +222,14 @@
               </p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'"><strong>Presupuesto adicional solicitado: </strong>
                 {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }} </p>
-
+                <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
+                  <strong >
+                    Valor después de la modificación
+                    <span *ngIf="novedad?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '1'">(Obra) </span>
+                    <span *ngIf="novedad?.datosContratoProyectoModificadosXNovedad[0]?.tipoSolicitudCodigo == '2'">(Interventoría </span>:
+                  </strong>
+                  {{ valuePresupuesto(descripcion.presupuestoAdicionalSolicitado) | currency: '':'symbol':'3.0' }}
+                </p>
                 <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                   <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
                     <mat-card-title class="header-card--text sub-text">
